Part 5 of Time-Zone Support
git-svn-id: https://svn.apache.org/repos/asf/incubator/openmeetings/import/trunk/singlewebapp@1218939 13f79535-47bb-0310-9956-ffa450edef68